# LogisticAgent

./: .gitignore  README.md  TODO.md  lastConfigUsed  rviz_stage.rviz  txt.txt
lib/: algorithms.hpp  (+10 more)
src/logistic_sim/: CMakeLists.txt  experiments.txt  lastConfigUsed  missions_file.txt  package.xml  repair_stats.py  rostime.txt  run_exp.sh  run_goto.sh  run_kairos_agent.sh  setinitposes.py  simrun.txt  start_experiment.py  start_experiment_distributed.py  stop_experiment.sh  test-map.graph  times_file.txt  tmux_run_exp.sh
src/logistic_sim/include/: Agent.hpp  CFreeAgent.hpp  ConstAgent.hpp  DistrAgent.hpp  GlobalAgent.hpp  GlobalTaskPlanner.hpp  GoToAgent.hpp  LogicAgent.hpp  OnlineAgent.hpp  OnlineCentralizedAgent.hpp  OnlineCentralizedTaskPlanner.hpp  OnlineDCOPAgent.hpp  OnlineDCOPTaskPlanner.hpp  OnlineDummyAgent.hpp  OnlineDummyTaskPlanner.hpp  OnlineGlobalTaskPlanner.hpp  OnlineGreedyTaskPlanner.hpp  OnlineRecoveryMATaskPlanner.hpp  OnlineTaskPlanner.hpp  SP_TaskPlanner.hpp  SPartAgent.hpp  SSIPatrolAgent.hpp  TPAgent.hpp  TaskPlanner.hpp  TokenAgent.hpp  algorithms.hpp  config.hpp  getgraph.hpp  message_types.hpp
src/logistic_sim/include/impl/: Agent.i.hpp  CFreeAgent.i.hpp  DistrAgent.i.hpp  GlobalAgent.i.hpp  GlobalTaskPlanner.i.hpp  GreedyTaskPlanner.i.hpp  LogicAgent.i.hpp  OnlineAgent.i.hpp  OnlineCentralizedTaskPlanner.i.hpp  OnlineGlobalTaskPlanner.i.hpp  OnlineGreedyTaskPlanner.i.hpp  SP_TaskPlanner.i.hpp  SPartAgent.i.hpp  SSIPatrolAgent.i.hpp  TPAgent.i.hpp  TaskPlanner.i.hpp  TokenAgent.i.hpp
src/logistic_sim/launch/: agent.launch  init_pos.launch  kairos.launch  map.launch  robot.launch  robot_fake_loc.launch  task_planner.launch
src/logistic_sim/lib/: algorithms.hpp  get_graph.hpp  permutations.hpp  struct_vertex.hpp
src/logistic_sim/maps/: cpoint.inc  crobot.inc  kairos.inc  m3.m
src/logistic_sim/maps/DIAG_floor1/: robots.inc
src/logistic_sim/maps/DIAG_labs/: robots.inc
src/logistic_sim/maps/L_map/: L_map.world  L_map.yaml
src/logistic_sim/maps/example/: robots.inc
src/logistic_sim/maps/grid/: grid.graph  grid.world  grid.yaml  points.inc  pos_stazioni  robots.inc  vertex.yaml
src/logistic_sim/maps/ice_full_20201005/: conversion.ods  ice_full_20201005.graph  ice_full_20201005.pgm  ice_full_20201005.world  ice_full_20201005.yaml  ice_full_20201005_points.xcf  point.inc  vertex.yaml  vertici.txt
src/logistic_sim/maps/icelab/: icelab.graph  icelab.world  icelab.yaml  icelab_small.graph  icelab_small.pgm  point.inc  robots.inc  vertex.yaml
src/logistic_sim/maps/icelab_black/: icelab_black.graph  icelab_black.world  icelab_black.yaml  icelab_black_big.graph  icelab_black_big.world  icelab_black_big.yaml  point.inc  point_backup.inc  point_big.inc  robots.inc  vertex.yaml
src/logistic_sim/maps/icelab_room/: icelab_room.blend  icelab_room.graph  icelab_room.world  icelab_room_original.pgm  icelab_room_points.xcf  point.inc  vertex.yaml
src/logistic_sim/maps/model1/: model1.world  model1.yaml
src/logistic_sim/maps/model2/: model2.graph  model2.pgm  model2.world  model2.yaml
src/logistic_sim/maps/model3/: model3.graph  model3.world  model3.yaml  robots.inc
src/logistic_sim/maps/model4/: model4.graph  model4.world  model4.yaml
src/logistic_sim/maps/model5/: model5.graph  model5.yaml  model5_broken.pgm  model5_rolback.pgm  robots.inc  vertex.yaml
src/logistic_sim/maps/model6/: Untitled Document  model6.graph  model6.pgm  model6.world  model6.yaml  model6_test.graph  point.inc  robots.inc
src/logistic_sim/maps/test_kairos/: test_kairos.graph  test_kairos.pgm  test_kairos.xcf  test_kairos.yaml  vertex.yaml
src/logistic_sim/missions/: 1.txt  10.txt  2.txt  2short.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  video.txt
src/logistic_sim/msg/: Edge.msg  MAPDState.msg  Mission.msg  Path.msg  Task.msg  Token.msg  UtilAssignment.msg  Vertex.msg  Waypoints.msg
src/logistic_sim/params/: initial_poses.txt
src/logistic_sim/params/amcl/: amcl_omni.launch  robot_0_initial_pose.xml  robot_1_initial_pose.xml  robot_2_initial_pose.xml  robot_3_initial_pose.xml  robot_4_initial_pose.xml  robot_5_initial_pose.xml  robot_6_initial_pose.xml  robot_7_initial_pose.xml  robot_9_initial_pose.xml
src/logistic_sim/params/move_base/: base_local_planner_params.yaml  base_local_planner_params_icelab.yaml  base_local_planner_params_kairos.yaml  costmap_common_params.yaml  costmap_common_params_kairos.yaml  global_costmap_params.yaml  global_costmap_params_kairos.yaml  local_costmap_params_kairos.yaml
src/logistic_sim/results/: calculate_stats.py
src/logistic_sim/scripts/: generate_graph.m  generate_points.m  set_init_poses.sh
src/logistic_sim/src/: Agent.cpp  CFreeAgent.cpp  ConstAgent.cpp  DistrAgent.cpp  GlobalAgent.cpp  GlobalTaskPlanner.cpp  GoToAgent.cpp  GoToStartPos.cpp  GreedyTaskPlanner.cpp  LogicAgent.cpp  OnlineAgent.cpp  OnlineAgentMain.cpp  OnlineCentralizedAgent.cpp  OnlineCentralizedTaskPlanner.cpp  OnlineDCOPAgent.cpp  OnlineDCOPTaskPlanner.cpp  OnlineDummyAgent.cpp  OnlineDummyTaskPlanner.cpp  OnlineGlobalTaskPlanner.cpp  OnlineGreedyTaskPlanner.cpp  OnlineRecoveryMATaskPlanner.cpp  OnlineTaskPlanner.cpp  OnlineTaskPlannerMain.cpp  SP_TaskPlanner.cpp  SPartAgent.cpp  SSIPatrolAgent.cpp  TaskPlanner.cpp  TokenAgent.cpp  algorithms.cpp  config.cpp  get_graph.cpp  getgraph.cpp  mapd.cpp  mapd_heuristic.cpp  mapd_tree.cpp  partition.cpp  view_result.cpp
src/logistic_sim/srv/: AddMissions.srv  AddVertex.srv  AddVertexCoordinates.srv  ChangeEdge.srv  GoToPos.srv  GoToVertex.srv  NewPaths.srv  RemoveVertex.srv  RobotReady.srv  TreeDPOP.srv  UtilDPOP.srv
src/task_planner/: CMakeLists.txt  package.xml
src/task_planner/include/: GlobalTaskPlanner.hpp  GreedyTaskPlanner.hpp  NonUniformTaskPlanner.hpp  SP_TaskPlanner.hpp  TaskPlanner.hpp  getgraph.hpp  partition.hpp
src/task_planner/msg/: Mission.msg  Task.msg
src/task_planner/param/: all_task.txt  task.txt
src/task_planner/src/: GreedyTaskPlanner.cpp  NonUniformTaskPlanner.cpp  SP_TaskPlanner.cpp  TaskPlanner.cpp  part_test.cpp  partition.cpp  test_part.cpp  user.cpp
(+106 files in other folders)
